make all layers used in layer drawables 36dp to properly center them

--- a/main/res/drawable/dot_marker_archive_offline.xml
+++ b/main/res/drawable/dot_marker_archive_offline.xml
@@ -4,13 +4,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="#FF000000"
       android:pathData="m7.2,16.8 l9.6,-9.6"
       android:strokeWidth="2.5"
-      android:strokeColor="#fff"/>
+      android:strokeColor="@color/cacheMarker_icon"/>
   <path
-      android:fillColor="#FF000000"
       android:pathData="m16.8,16.8 l-9.6,-9.6"
       android:strokeWidth="2.5"
-      android:strokeColor="#fff"/>
+      android:strokeColor="@color/cacheMarker_icon"/>
 </vector>
