--- a/main/res/drawable/dot_note_offline.xml
+++ b/main/res/drawable/dot_note_offline.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M13.48,10.6L16.615,10.6L13.48,7.025L13.48,10.6M8.35,6.05L14.05,6.05L17.47,9.95L17.47,16.45A1.3,1.14 90,0 1,16.33 17.75L8.35,17.75C7.7173,17.75 7.21,17.165 7.21,16.45L7.21,7.35C7.21,6.6285 7.7173,6.05 8.35,6.05M8.35,11.9L8.35,13.2L16.33,13.2L16.33,11.9L8.35,11.9M8.35,14.5L8.35,15.8L13.48,15.8L13.48,14.5L8.35,14.5Z"
-      android:fillColor="#fff"/>
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
