--- a/main/res/drawable/type_hq.xml
+++ b/main/res/drawable/type_hq.xml
@@ -1,12 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="m8.958,16.077h1.968v-8.316h-1.968v3.216h-2.496v-3.216h-1.968v8.316h1.968v-3.564h2.496z"
-      android:fillColor="#fff"/>
+      android:pathData="m15.2115,21.7372l1.804,0l0,-7.623l-1.804,0l0,2.948l-2.288,0l0,-2.948l-1.804,0l0,7.623l1.804,0l0,-3.267l2.288,0z"
+      android:fillColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m17.646,15.537c1.02,-0.564 1.956,-1.608 1.956,-3.624 0,-2.772 -1.404,-4.356 -3.756,-4.356 -2.34,0 -3.744,1.644 -3.744,4.356 0,2.772 1.404,4.332 3.624,4.332 1.56,0 2.424,0.732 3.192,1.596l1.188,-1.548c-0.672,-0.48 -1.38,-0.756 -2.46,-0.756zM14.166,11.913c0,-2.1 0.576,-2.916 1.68,-2.916 1.116,0 1.692,0.816 1.692,2.916 0,2.112 -0.564,2.928 -1.692,2.928 -1.08,0 -1.68,-0.816 -1.68,-2.928z"
-      android:fillColor="#fff"/>
+      android:pathData="m23.1755,21.2423c0.935,-0.517 1.793,-1.474 1.793,-3.322 0,-2.541 -1.287,-3.993 -3.443,-3.993 -2.145,0 -3.432,1.507 -3.432,3.993 0,2.541 1.287,3.971 3.322,3.971 1.43,0 2.222,0.671 2.926,1.463l1.089,-1.419c-0.616,-0.44 -1.265,-0.693 -2.255,-0.693zM19.9855,17.9202c0,-1.925 0.528,-2.673 1.54,-2.673 1.023,0 1.551,0.748 1.551,2.673 0,1.936 -0.517,2.684 -1.551,2.684 -0.99,0 -1.54,-0.748 -1.54,-2.684z"
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
