--- a/main/res/drawable/type_mystery.xml
+++ b/main/res/drawable/type_mystery.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="m12.498,4.221c-2.266,0 -3.894,0.88 -5.148,2.354l2.222,1.716c0.792,-0.902 1.672,-1.342 2.574,-1.342 0.968,0 1.54,0.462 1.54,1.254 0,1.804 -3.498,1.54 -3.498,5.346v0.682h3.168v-0.55c0,-2.464 3.96,-2.222 3.96,-5.786 0,-1.958 -1.606,-3.674 -4.818,-3.674zM11.816,16.233c-1.1,0 -1.98,0.902 -1.98,1.98 0,1.1 0.88,2.002 1.98,2.002s1.98,-0.902 1.98,-2.002c0,-1.078 -0.88,-1.98 -1.98,-1.98z"
-      android:fillColor="#fff"/>
+      android:pathData="m18.4565,10.8693c-2.0772,0 -3.5695,0.8067 -4.719,2.1578l2.0368,1.573c0.726,-0.8268 1.5327,-1.2302 2.3595,-1.2302 0.8873,0 1.4117,0.4235 1.4117,1.1495 0,1.6537 -3.2065,1.4117 -3.2065,4.9005l0,0.6252l2.904,0l0,-0.5042c0,-2.2587 3.63,-2.0368 3.63,-5.3038 0,-1.7948 -1.4722,-3.3678 -4.4165,-3.3678zM17.8313,21.8803c-1.0083,0 -1.815,0.8268 -1.815,1.815 0,1.0083 0.8067,1.8352 1.815,1.8352s1.815,-0.8268 1.815,-1.8352c0,-0.9882 -0.8067,-1.815 -1.815,-1.815z"
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
