--- a/main/res/drawable/type_traditional.xml
+++ b/main/res/drawable/type_traditional.xml
@@ -1,19 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="m19.6877,10.0166s-0.7568,3.8542 -0.854,4.0581c-0.2812,0.2324 -9.059,4.6376 -9.059,4.6376 -0.255,0.085 -0.4395,0.0752 -0.6009,-0.0481 0,0 -3.9743,-4.4616 -4.1223,-4.8398 -0.0599,-0.1892 -0.038,-4.4496 -0.038,-4.4496z"
-      android:strokeWidth="1.02"
-      android:fillColor="#00000000"
-      android:strokeColor="#fff"/>
+      android:pathData="m25.047,16.1818s-0.6937,3.5331 -0.7828,3.7199c-0.2578,0.213 -8.304,4.2511 -8.304,4.2511 -0.2337,0.0779 -0.4028,0.0689 -0.5508,-0.0441 0,0 -3.6431,-4.0898 -3.7788,-4.4365 -0.0549,-0.1734 -0.0348,-4.0788 -0.0348,-4.0788z"
+      android:strokeWidth="0.935"
+      android:strokeColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m15.1589,5.2035 l5.0959,4.1584c0.1442,0.1923 -0.0601,0.3125 -0.0601,0.3125l-10.0592,4.0863c-0.236,0.1145 -0.4735,0.0341 -0.6009,-0.0721l-4.8795,-4.4949c-0.4327,-0.4928 0.2163,-0.6971 0.2163,-0.6971l9.6268,-3.3171c0.3846,-0.1562 0.661,0.024 0.661,0.024zM20.2127,9.5716 L19.9519,10.431c-0.1831,0.1828 -0.3013,0.2524 -0.3013,0.2524l-9.6145,4.3988c-0.4377,0.1615 -0.661,-0.0481 -0.661,-0.0481l-4.7473,-4.6992c-0.1275,-0.119 -0.1082,-0.2644 -0.1082,-0.2644s-0.0431,-0.3092 -0.0016,-1.2766z"
-      android:fillColor="#fff"/>
+      android:pathData="m20.8956,11.7698 l4.6712,3.8119c0.1322,0.1763 -0.0551,0.2864 -0.0551,0.2864l-9.221,3.7457c-0.2163,0.1049 -0.434,0.0313 -0.5508,-0.0661l-4.4729,-4.1204c-0.3966,-0.4517 0.1983,-0.639 0.1983,-0.639l8.8245,-3.0407c0.3525,-0.1432 0.6059,0.022 0.6059,0.022zM25.5283,15.7739 L25.2893,16.5618c-0.1679,0.1676 -0.2762,0.2314 -0.2762,0.2314l-8.8133,4.0322c-0.4012,0.148 -0.6059,-0.0441 -0.6059,-0.0441l-4.3517,-4.3076c-0.1169,-0.1091 -0.0992,-0.2424 -0.0992,-0.2424s-0.0395,-0.2834 -0.0015,-1.1702z"
+      android:fillColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m9.5874,19.0102 l0.2719,-4.712"
-      android:strokeWidth="1.02"
-      android:fillColor="#00000000"
-      android:strokeColor="#fff"/>
+      android:pathData="m15.7884,24.4261 l0.2493,-4.3193"
+      android:strokeWidth="0.935"
+      android:strokeColor="@color/cacheMarker_icon"/>
 </vector>
