--- a/main/res/drawable/type_unknown.xml
+++ b/main/res/drawable/type_unknown.xml
@@ -1,15 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="m5.5657,13.801q-1.0098,-0.582 -1.0098,-1.7461 0,-1.1641 1.0098,-1.7461 0.5059,-0.293 1.0098,-0.293 0.5039,0 1.0098,0.293 1.0098,0.582 1.0098,1.7461 0,1.1641 -1.0098,1.7461 -0.5059,0.293 -1.0098,0.293 -0.5039,0 -1.0098,-0.293z"
-      android:fillColor="#fff"/>
+      android:pathData="m12.1019,19.6509q-0.9257,-0.5335 -0.9257,-1.6006 0,-1.0671 0.9257,-1.6006 0.4637,-0.2686 0.9257,-0.2686 0.4619,0 0.9257,0.2686 0.9257,0.5335 0.9257,1.6006 0,1.0671 -0.9257,1.6006 -0.4637,0.2686 -0.9257,0.2686 -0.4619,0 -0.9257,-0.2686z"
+      android:fillColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m10.99,13.801q-1.0098,-0.582 -1.0098,-1.7461 0,-1.1641 1.0098,-1.7461 0.5059,-0.293 1.0098,-0.293t1.0098,0.293q1.0098,0.582 1.0098,1.7461 0,1.1641 -1.0098,1.7461 -0.5059,0.293 -1.0098,0.293t-1.0098,-0.293z"
-      android:fillColor="#fff"/>
+      android:pathData="m17.0742,19.6509q-0.9257,-0.5335 -0.9257,-1.6006 0,-1.0671 0.9257,-1.6006 0.4637,-0.2686 0.9257,-0.2686t0.9257,0.2686q0.9257,0.5335 0.9257,1.6006 0,1.0671 -0.9257,1.6006 -0.4637,0.2686 -0.9257,0.2686t-0.9257,-0.2686z"
+      android:fillColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m16.415,13.801q-1.0098,-0.582 -1.0098,-1.7461 0,-1.1641 1.0098,-1.7461 0.5059,-0.293 1.0098,-0.293 0.5039,0 1.0098,0.293 1.0098,0.582 1.0098,1.7461 0,1.1641 -1.0098,1.7461 -0.5059,0.293 -1.0098,0.293 -0.5039,0 -1.0098,-0.293z"
-      android:fillColor="#fff"/>
+      android:pathData="m22.0471,19.6509q-0.9257,-0.5335 -0.9257,-1.6006 0,-1.0671 0.9257,-1.6006 0.4637,-0.2686 0.9257,-0.2686 0.4619,0 0.9257,0.2686 0.9257,0.5335 0.9257,1.6006 0,1.0671 -0.9257,1.6006 -0.4637,0.2686 -0.9257,0.2686 -0.4619,0 -0.9257,-0.2686z"
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
