--- a/main/res/drawable/type_virtual.xml
+++ b/main/res/drawable/type_virtual.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="M12,4.4A6.3,6.3 0,0 0,5.7 10.7L5.7,18.4L7.8,16.3L9.9,18.4L12,16.3L14.1,18.4L16.2,16.3L18.3,18.4L18.3,10.7A6.3,6.3 0,0 0,12 4.4M9.9,8.6A1.4,1.4 0,0 1,11.3 10A1.4,1.4 0,0 1,9.9 11.4A1.4,1.4 0,0 1,8.5 10A1.4,1.4 0,0 1,9.9 8.6M14.1,8.6A1.4,1.4 0,0 1,15.5 10A1.4,1.4 0,0 1,14.1 11.4A1.4,1.4 0,0 1,12.7 10A1.4,1.4 0,0 1,14.1 8.6Z"
-      android:fillColor="#fff"/>
+      android:pathData="M18,11.0333A5.775,5.775 0,0 0,12.225 16.8083L12.225,23.8667L14.15,21.9417L16.075,23.8667L18,21.9417L19.925,23.8667L21.85,21.9417L23.775,23.8667L23.775,16.8083A5.775,5.775 0,0 0,18 11.0333M16.075,14.8833A1.2833,1.2833 0,0 1,17.3583 16.1667A1.2833,1.2833 0,0 1,16.075 17.45A1.2833,1.2833 0,0 1,14.7917 16.1667A1.2833,1.2833 0,0 1,16.075 14.8833M19.925,14.8833A1.2833,1.2833 0,0 1,21.2083 16.1667A1.2833,1.2833 0,0 1,19.925 17.45A1.2833,1.2833 0,0 1,18.6417 16.1667A1.2833,1.2833 0,0 1,19.925 14.8833Z"
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
