--- a/main/res/drawable/type_wherigo.xml
+++ b/main/res/drawable/type_wherigo.xml
@@ -1,12 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="m12,3.2051c-2.2539,-0.0003 -4.5081,0.8577 -6.2227,2.5723 -3.429,3.429 -3.429,9.0163 0,12.445 3.429,3.429 9.0163,3.429 12.445,0 2.7911,-2.7911 3.3091,-7.0113 1.5566,-10.334l-1.0527,2.1406c0.6973,2.3755 0.1068,5.0436 -1.7734,6.9238 -2.7431,2.7431 -7.1632,2.7431 -9.9062,0s-2.7431,-7.1632 0,-9.9062c1.8793,-1.8793 4.5449,-2.4695 6.9199,-1.7734l2.1426,-1.0547c-1.2811,-0.6753 -2.695,-1.0135 -4.1094,-1.0137z"
-      android:fillColor="#fff"/>
+      android:pathData="m18,9.938c-2.0664,0 -4.1324,0.7863 -5.7041,2.3579 -3.1432,3.1432 -3.1432,8.2649 0,11.4079 3.1432,3.1432 8.2649,3.1432 11.4079,0 2.699,-2.699 3.078,-6.8558 1.1423,-9.9669l-0.9006,1.8315c0.953,2.3217 0.4854,5.0808 -1.4054,6.9717 -2.5145,2.5145 -6.5663,2.5145 -9.0807,0s-2.5145,-6.5663 0,-9.0807c1.8907,-1.8907 4.6497,-2.3601 6.9717,-1.4073l1.8315,-0.9006c-1.2995,-0.8083 -2.7809,-1.2139 -4.2629,-1.2139z"
+      android:fillColor="@color/cacheMarker_icon"/>
   <path
-      android:pathData="m6.8379,11.362 l11.409,-5.6096 -5.6096,11.409z"
-      android:fillColor="#fff"/>
+      android:pathData="m13.2681,17.4152 l10.4583,-5.1421 -5.1421,10.4583z"
+      android:fillColor="@color/cacheMarker_icon"/>
 </vector>
