--- a/main/res/drawable/waypoint_flag.xml
+++ b/main/res/drawable/waypoint_flag.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
   <path
-      android:pathData="M7.22,5.07A0.77,0.77 0,0 1,7.99 5.84L7.99,6.5176C8.8062,6.1788 9.915,5.84 11.07,5.84C13.38,5.84 13.38,7.38 14.92,7.38C17.23,7.38 18,5.84 18,5.84L18,12C18,12 17.23,13.54 14.92,13.54C12.61,13.54 12.61,12 11.07,12C8.76,12 7.99,13.54 7.99,13.54L7.99,18.93L6.45,18.93L6.45,5.84A0.77,0.77 0,0 1,7.22 5.07Z"
+      android:pathData="M13.52,11.11A0.77,0.77 0,0 1,14.29 11.88L14.29,12.5576C15.1062,12.2188 16.215,11.88 17.37,11.88C19.68,11.88 19.68,13.42 21.22,13.42C23.53,13.42 24.3,11.88 24.3,11.88L24.3,18.04C24.3,18.04 23.53,19.58 21.22,19.58C18.91,19.58 18.91,18.04 17.37,18.04C15.06,18.04 14.29,19.58 14.29,19.58L14.29,24.97L12.75,24.97L12.75,11.88A0.77,0.77 0,0 1,13.52 11.11Z"
       android:fillColor="#C62828"/>
 </vector>
