--- a/main/res/drawable/dot_marker.xml
+++ b/main/res/drawable/dot_marker.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
-      android:fillColor="#fff"/>
+      android:fillColor="@color/cacheMarker_background"/>
 </vector>
