--- a/main/res/layout/cache_information_item.xml
+++ b/main/res/layout/cache_information_item.xml
@@ -37,7 +37,7 @@
             android:textSize="@dimen/textSize_detailsPrimary"
             android:textIsSelectable="false"
             android:textColor="@color/colorText"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:text="value"/>
 
         <RatingBar
