[refactor settings] cleanup and restore missing functionality
- directly update authorization preference to better reflect current login state
- introduce some generic helper methods
- remove outdated WIP comments
- handle map source changes correctly

--- a/main/res/xml/preferences_map.xml
+++ b/main/res/xml/preferences_map.xml
@@ -12,6 +12,7 @@
             android:defaultValue="0"
             android:dialogTitle="@string/init_mapsource_select"
             android:key="@string/pref_mapsource"
+            android:summary="%s"
             android:title="@string/init_mapsource_select"
             app:iconSpaceReserved="false" />
         <Preference
