--- a/main/res/xml/preferences_navigation.xml
+++ b/main/res/xml/preferences_navigation.xml
@@ -9,15 +9,19 @@
         android:title="@string/settings_title_offline_routing"
         app:iconSpaceReserved="false">
         <Preference android:summary="@string/settings_summary_offline_routing" app:iconSpaceReserved="false" />
-        <SeekBarPreference
-            android:summary="@string/init_brouterThreshold_description"
+
+        <Preference
+            android:key="@string/pref_fakekey_brouterDistanceThresholdTitle"
             android:title="@string/init_brouterThreshold"
-            android:defaultValue="@integer/brouter_threshold_default"
-            android:key="@string/pref_brouterDistanceThreshold"
-            android:max="@integer/brouter_threshold_max"
-            android:min="1"
-            app:showSeekBarValue="true"
+            android:summary="@string/init_brouterThreshold_description"
             app:iconSpaceReserved="false"/>
+        <cgeo.geocaching.settings.ProximityPreference
+            android:key="@string/pref_brouterDistanceThreshold"
+            android:defaultValue="@integer/brouter_threshold_default"
+            app:min="1"
+            app:max="@integer/brouter_threshold_max"
+            app:highRes="false"
+            app:iconSpaceReserved="false" />
 
         <CheckBoxPreference
             android:defaultValue="false"
@@ -47,15 +51,16 @@
             android:title="@string/init_autoDownloads"
             app:iconSpaceReserved="false" />
 
-        <SeekBarPreference
-            android:summary="@string/init_updateinterval_description"
+        <Preference
             android:title="@string/init_updateinterval_title"
-            android:defaultValue="@integer/brouter_updateinterval_default"
-            android:key="@string/pref_brouterAutoTileDownloadsInterval"
-            android:max="@integer/brouter_updateinterval_max"
-            android:min="0"
-            app:showSeekBarValue="true"
+            android:summary="@string/init_updateinterval_description"
             app:iconSpaceReserved="false"/>
+        <cgeo.geocaching.settings.SeekbarPreference
+            android:key="@string/pref_brouterAutoTileDownloadsInterval"
+            android:defaultValue="@integer/brouter_updateinterval_default"
+            app:min="0"
+            app:max="@integer/brouter_updateinterval_max"
+            app:iconSpaceReserved="false" />
 
         <ListPreference
             android:dialogTitle="@string/init_brouterProfileWalk"
