Try to fix autofill functionality

--- a/main/res/layout/authorization_credentials_activity.xml
+++ b/main/res/layout/authorization_credentials_activity.xml
@@ -30,7 +30,8 @@
                 android:inputType="textPersonName"
                 style="@style/textinput_embedded"
                 android:hint="@string/init_authorization_credential_username"
-                android:autofillHints=".AUTOFILL_HINT_USERNAME" />
+                android:importantForAutofill="yes"
+                android:autofillHints="username" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout style="@style/textinput_edittext_singleline">
@@ -39,7 +40,8 @@
                 android:inputType="textPassword"
                 android:hint="@string/init_authorization_credential_password"
                 style="@style/textinput_embedded"
-                android:autofillHints=".AUTOFILL_HINT_PASSWORD" />
+                android:importantForAutofill="yes"
+                android:autofillHints="password" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
