--- a/main/res/xml/preferences_appearence.xml
+++ b/main/res/xml/preferences_appearence.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:icon="?attr/settings_eye"
+    android:icon="@drawable/settings_eye"
     android:key="@string/pref_appearance"
     android:title="@string/settings_title_appearance"
     android:summary="@string/settings_summary_appearance" >
