--- a/main/res/xml/preferences_cachedetails.xml
+++ b/main/res/xml/preferences_cachedetails.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:icon="?attr/settings_details"
+    android:icon="@drawable/settings_details"
     android:title="@string/settings_title_cachedetails"
     android:summary="@string/settings_summary_cachedetails" >
     <CheckBoxPreference
