--- a/main/res/xml/preferences_map.xml
+++ b/main/res/xml/preferences_map.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:icon="?attr/settings_map"
+    android:icon="@drawable/settings_map"
     android:summary="@string/settings_summary_map"
     android:title="@string/settings_title_map">
 
