--- a/main/res/xml/preferences_offlinedata.xml
+++ b/main/res/xml/preferences_offlinedata.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:icon="?attr/settings_sdcard"
+    android:icon="@drawable/settings_sdcard"
     android:summary="@string/settings_summary_offlinedata"
     android:title="@string/settings_title_offlinedata">
     <CheckBoxPreference
