--- a/main/res/layout-h390dp-land/activity_bottom_navigation.xml
+++ b/main/res/layout-h390dp-land/activity_bottom_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cgeo.geocaching.ui.RelativeLayoutWithInterceptTouchEventPossibility xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_viewroot"
+    android:id="@+id/bottomnavigation_activity_viewroot"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
