--- a/main/res/layout/coordinatescalculateglobal_dialog.xml
+++ b/main/res/layout/coordinatescalculateglobal_dialog.xml
@@ -33,8 +33,46 @@
                 android:text="Experimental! Only Plain supported, no auto-add/remove of variables yet, no update of coords when vars are changed elsewhere yet"
                 />
 
-            <include
-                layout="@layout/coordinates_calculate" />
+            <Spinner
+                android:id="@+id/spinnerCoordinateFormats"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                tools:listitem="@android:layout/simple_spinner_item" />
+
+            <!-- 'Plain' input -->
+            <LinearLayout
+                android:id="@+id/PlainFormat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:importantForAutofill="noExcludeDescendants"
+                android:orientation="vertical">
+                <com.google.android.material.textfield.TextInputLayout style="@style/textinput_edittext_singleline">
+                    <EditText
+                        android:id="@+id/PlainLat"
+                        style="@style/textinput_embedded"
+                        android:inputType="text"
+                        android:hint="@string/latitude" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout style="@style/textinput_edittext_singleline">
+                    <EditText
+                        android:id="@+id/PlainLon"
+                        style="@style/textinput_embedded"
+                        android:inputType="text|textCapCharacters"
+                        android:hint="@string/longitude" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <!-- 'Non-Plain' input -->
+            <cgeo.geocaching.ui.CoordinatesCalculateGrid
+                android:id="@+id/NonPlainFormat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/textinputlayout_bcg_active"
+                android:padding="12dp"
+                />
 
             <RelativeLayout
                 android:layout_width="match_parent"
