--- a/main/res/drawable/marker_rating_d_5.xml
+++ b/main/res/drawable/marker_rating_d_5.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="13"
     android:viewportHeight="13">
   <path
-      android:pathData="m6.5,6.5v6.5l-2.0086,-0.3181 -1.812,-0.9233z"
+      android:pathData="m6.5,6.5 l0,6.5 -2.0086,-0.3181z"
       android:fillColor="#FF000000" />
 </vector>
