--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -72,6 +72,8 @@
     <color name="dotBg_waypointOutline">#ff999999</color>
     <color name="dotBg_waypointBg">#ffffffff</color>
 
+    <color name="marker_rating_0">@color/cacheMarker_background</color>
+    <color name="marker_rating_5">#ff388E3C</color>
     <color name="marker_rating_10">#ff388E3C</color>
     <color name="marker_rating_15">#ff388E3C</color>
     <color name="marker_rating_20">#ff689f38</color>
