--- a/main/res/drawable/marker_rating_d_10.xml
+++ b/main/res/drawable/marker_rating_d_10.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="13">
   <path
       android:pathData="m6.5,6.5v6.5l-2.0086,-0.3181 -1.812,-0.9233z"
-      android:fillColor="#FF000000" />
+      android:fillColor="@color/marker_rating_10" />
 </vector>
