--- a/main/res/drawable/marker_rating_d_40.xml
+++ b/main/res/drawable/marker_rating_d_40.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="13">
   <path
       android:pathData="m6.5,6.5v6.5l-2.0086,-0.3181 -1.812,-0.9233 -1.438,-1.438 -0.9233,-1.812 -0.3181,-2.0086 0.3181,-2.0086 0.9233,-1.812 1.438,-1.438z"
-      android:fillColor="#FF000000" />
+      android:fillColor="@color/marker_rating_40" />
 </vector>
