--- a/main/res/drawable/marker_rating_t_5.xml
+++ b/main/res/drawable/marker_rating_t_5.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="13">
   <path
       android:pathData="m6.5,6.5 l-0,6.5 2.0086,-0.3181z"
-      android:fillColor="#FF000000" />
+      android:fillColor="@color/marker_rating_5" />
 </vector>
